[project]
name = "examples-backend-fastapi"
version = "0.1.0"
description = "An example backend Agent using FastAPI for the LayerCode Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pydantic>=2.11.3",
    "uvicorn>=0.34.2",
]
